# calcipy

./: .calcipy.json  .copier-answers.yml  .deepsource.toml  .editorconfig  .flake8  .gitignore  .gitlint  .isort.cfg  .mypy.ini  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pylintrc  .pyup.yml  .ruff.toml  .sourcery.yaml  .tool-versions  .yamllint.yaml  404.html  CALCIPY_BACKWARD_COMPAT_PLAN.md  CHANGELOG-raw.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  LICENSE  README.md  STYLE_GUIDE.md  TAG_SUMMARY.md  TODO.txt  _copier_migration.py  appveyor.yml  dodo-1.py  dodo-2.py  dodo-3.py  dodo.py  gen_ref_nav.py  ideas-toml.md  ideas.txt  index.html  messy-python-cfonts.toml  mise.toml  (+19 more)
.github/: ABOUT.md  PULL_REQUEST_TEMPLATE.md  README.md  codeql-config.yml  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci_pipeline.yml  codeql-analysis.yml  labeler.yml  labels.yml  publish.yml  update_docs.yml  upgrade-dependencies.yml
.test_calcipy_project/: .copier-answers.yml  .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE  README.md  appveyor.yml  dodo.py  mkdocs.yml  noxfile.py  pyproject.toml
.test_calcipy_project/.github/: PULL_REQUEST_TEMPLATE.md
.test_calcipy_project/.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.test_calcipy_project/.github/workflows/: labels.yml
.test_calcipy_project/docs/: README.md
.test_calcipy_project/docs_custom/: README.md
.test_calcipy_project/docs_custom/docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md
.test_calcipy_project/docs_custom/sub/: DEVELOPER_GUIDE.md  README.md
.test_calcipy_project/scripts/: check_imports.py  sample-json-file.json
.test_calcipy_project/test_project/: __init__.py
.test_calcipy_project/tests/: __init__.py  configuration.py  conftest.py  test_zz_test_project.py
_adr/: README.md
_code-archive/: doc.py  doit_watchcode.py  test_doc.py
_javascript/: tables.js
calcipy/: __init__.py  _compat.py  _md_helpers.py  _runtime_type_check_setup.py  _temp_dg.py  can_skip.py  cli.py  code_tag_collector.py  collection.py  conftest.py  dot_dict.py  file_helpers.py  file_search.py  invoke_helpers.py  log.py  log_helpers.py  main.py  markdown_table.py  markup_table.py  proc_helpers.py  registered_tasks.py  scripts.py  shoals.py  tag_collector.py  tasks.py  wrappers.py
calcipy-flake8/: README.md  pyproject.toml
calcipy/_corallium/: __init__.py  file_helpers.py
calcipy/check_for_stale_packages/: __init__.py  _check_for_stale_packages.py
calcipy/cli/: __init__.py  main.py
calcipy/code_tag_collector/: __init__.py  _collector.py  cli.py
calcipy/dev/: __init__.py  conftest.py  noxfile.py
calcipy/doit_helpers/: __init__.py  base.py  doc.py  doit_globals.py  lint.py  test.py
calcipy/doit_tasks/: __init__.py  base.py  code_tag_collector.py  code_tags.py  doc.py  doit_globals.py  file_search.py  lint.py  packaging.py  summary_reporter.py  tag_collector.py  test.py
calcipy/dot_dict/: __init__.py  _dot_dict.py
calcipy/experiments/: bump_programmatically.py  check_duplicate_test_names.py  sync_package_dependencies.py
calcipy/markup_writer/: __init__.py  _writer.py
calcipy/md_writer/: __init__.py  _writer.py
calcipy/noxfile/: __init__.py  _noxfile.py
calcipy/tasks/: _invoke.py  all_tasks.py  cached_utilities.py  cl.py  ctc.py  defaults.py  doc.py  executable_utils.py  experiments.py  invoke_helpers.py  lint.py  most_tasks.py  mypy.py  nox.py  only_lint.py  only_tags.py  only_types.py  pack.py  pyright.py  pytest.py  stale.py  tags.py  test.py  types.py
calcipy/testing/: cli.py
dash_dev/: .flake8  .isort.cfg  .whitelist.txt  __init__.py  conftest.py  doit_base.py  doit_dev.py  doit_doc.py  doit_lint.py  doit_test.py  log_helpers.py  registered_tasks.py  tag_collector.py
dash_dev/doit_helpers/: base.py  dev.py  doc.py  doit_globals.py  lint.py  test.py
docs/: Advanced_Configuration.md  CHANGELOG.md  CNAME  CODE_TAG_SUMMARY.md  CONTRIBUTING.md  Calcipy.sketch  DEVELOPER_GUIDE.md  README.md  TAG_SUMMARY.md  changelog.md  gen_ref_nav.py  reference.md  tag_summary.md
docs/Advanced_Documentation/: index.html
docs/CHANGELOG/: index.html
docs/CODE_TAG_SUMMARY/: index.html
docs/DEVELOPER_GUIDE/: index.html
docs/MIGRATION/: index.html
docs/STYLE_GUIDE/: index.html
docs/_javascript/: tables.js
docs/_styles/: mkdocstrings.css
docs/adr/: NNN-Template.md  README.md  index.html
docs/adr-research/: index.html
docs/dash_dev/: conftest.html  doit_base.html  doit_doc.html  doit_lint.html  doit_test.html  index.html  log_helpers.html  registered_tasks.html  tag_collector.html
docs/docs/: Advanced_Documentation.md  CHANGELOG.md  CODE_TAG_SUMMARY.md  DEVELOPER_GUIDE.md  MIGRATION.md  SECURITY.md  STYLE_GUIDE.md  _docs.md
docs/modules/: .gitignore
docs/reference/: dodo.md
pack_1/: pyproject.toml
pack_1/pack_1/: __init__.py
pack_2/: pyproject.toml
pack_3/: pyproject.toml
pack_3/tests/: test_loguru.py
plan/: code-tags-cleanup.md  future-tooling-optimization.md  tooling-refactor.md  uv-conversion.md
reference/SUMMARY/: index.html
reference/calcipy/: index.html
scripts/: check_imports.py
search/: search_index.json
src/calcipy/: __init__.py  _runtime_type_check_setup.py  cli.py  invoke_helpers.py  markdown_table.py
tests/: __init__.py  configuration.py  conftest.py  test_backward_compat_shims.py  test_can_skip.py  test_cli.py  test_code_tag_collector.py  test_collection.py  test_doit_base.py  test_doit_doc.py  test_doit_lint.py  test_doit_test.py  test_dot_dict.py  test_file_helpers.py  test_file_search.py  test_invoke_helpers.py  test_log_helpers.py  test_markup_table.py  test_proc_helpers.py  test_scripts.py  test_tag_collector.py  test_wrappers.py  test_zz_calcipy.py  test_zz_dash_dev.py
tests/assert-cache/: README.md  test_format_report.json
tests/check_for_stale_packages/: test_check_for_stale_packages.py
tests/cli/: test_main.py
tests/code_tag_collector/: test_collector.py
tests/data/doit_project/: pyproject.toml  test_file.py
(+184 files in other folders)
