[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.9.26"]

[dependency-groups]
ci = [
  "calcipy[lint,test,types]",
  "duty>=1.6",
  "hypothesis[cli] >=6.112.4", # Use CLI with: "uv run hypothesis write calcipy.dot_dict.ddict"
  "pytest-asyncio >=0.24.0",
  "pytest-subprocess >=1.5.2",
  "pytest-xdist>=3.6",
  "syrupy >=4.7.2",
  "types-markdown>=3.6",
  "types-pyyaml >=6.0.12.20240917",
  "types-setuptools >=75.1.0.20240917",
]
ddict = ["calcipy[ddict]"]
docs = [
  "calcipy[doc]",
  "markdown-callouts>=0.4",
  "markdown-exec>=1.8",
  "mkdocs-coverage>=1.0",
  "mkdocs-git-revision-date-localized-plugin>=1.2",
  "mkdocs-llmstxt>=0.2",
  "mkdocs-minify-plugin>=0.8",
  "mkdocs-section-index>=0.3",
  # YORE: EOL 3.10: Remove line.
  "tomli>=2.0; python_version < '3.11'",
]
maintain = [
  "build>=1.2",
  "git-changelog>=2.5",
  "twine>=5.1",
  "yore>=0.3.3",
]
nox = ["calcipy[nox]"]
tags = ["calcipy[tags]"]

[project]
authors = [
  {email = "dev.act.kyle@gmail.com", name = "Kyle King"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
] # https://pypi.org/classifiers/
dependencies = [
  "beartype >=0.19.0",
  "corallium>=2.1.1",
  "invoke >=2.2.0",
]
description = "Python package to simplify development"
keywords = ["calcipy_template"]
license = "MIT"
maintainers = []
name = "calcipy"
readme = "docs/README.md"
requires-python = ">=3.10.19"
version = "6.0.0b0"

[project.optional-dependencies]
# Individual extras (maintained for backward compatibility)
ddict = [
  "python-box >=7.2.0",
]
# Full development environment - all dependencies for project development
# Install with: uv add --dev 'calcipy[dev]'
dev = [
  "arrow >=1.3.0",
  "commitizen >=3.29.1",
  "griffe >=1.3.2",
  "mkdocs >=1.6.1",
  "mkdocs-gen-files >=0.5.0",
  "mkdocs-material >=9.5.39",
  "mkdocstrings[python] >=0.26.1",
  "mypy >=1.11.2",
  "nox >=2024.10.9",
  "pymdown-extensions >=10.11.2",
  "pytest >=8.3.3",
  "pytest-cov >=5.0.0",
  "pytest-randomly >=3.15.0",
  "pytest-watcher >=0.4.3",
  "pyyaml >=6.0.2",
  "ruff >=0.8.2",
  "semver >=3.0.2",
]
doc = [
  "commitizen >=3.29.1",
  "mkdocs >=1.6.1",
  "mkdocs-gen-files >=0.5.0",
  "mkdocs-material >=9.5.39",
  "mkdocstrings[python] >=0.26.1",
  "pymdown-extensions >=10.11.2",
]
experimental = [
  "griffe >=1.3.2",
  "semver >=3.0.2",
]
lint = [
  "ruff >=0.8.2",
]
nox = [
  "nox >=2024.10.9", # "virtualenv >=20.26.6", # Prevents 'scripts' KeyError with Python 3.12
]
tags = [
  "arrow >=1.3.0",
  "pyyaml >=6.0.2", # Required for get_doc_subdir
]
test = [
  "pytest >=8.3.3",
  "pytest-cov >=5.0.0",
  "pytest-randomly >=3.15.0",
  "pytest-watcher >=0.4.3",
]
# Standalone tool usage - minimal dependencies for CLI tools
# Install with: uv tool install 'calcipy[tool]'
tool = [
  "arrow >=1.3.0", # For tags task
  "pyyaml >=6.0.2", # For tags task
  "ruff >=0.8.2", # For lint task
]
types = [
  "mypy >=1.11.2",
]

[project.scripts] # Docs: https://setuptools.pypa.io/en/latest/userguide/entry_point.html#console-scripts
calcipy = "calcipy.scripts:start"
calcipy-docs = "calcipy.scripts:start_docs"
calcipy-lint = "calcipy.scripts:start_lint"
calcipy-pack = "calcipy.scripts:start_pack"
calcipy-tags = "calcipy.scripts:start_tags"
calcipy-test = "calcipy.scripts:start_test"
calcipy-types = "calcipy.scripts:start_types"

[project.urls]
"Bug Tracker" = "https://github.com/kyleking/calcipy/issues"
"Changelog" = "https://github.com/kyleking/calcipy/blob/main/docs/docs/CHANGELOG.md"
"Documentation" = "https://calcipy.kyleking.me"
"Repository" = "https://github.com/kyleking/calcipy"

[tool.commitizen]
version = "6.0.0b0"
version_files = ["calcipy/__init__.py:^__version", "pyproject.toml:^version"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
enable_error_code = ["ignore-without-code", "possibly-undefined", "redundant-expr", "truthy-bool"]
extra_checks = true
files = ["calcipy", "tests"]
no_implicit_reexport = true
plugins = [
]
python_version = "3.10"
show_column_numbers = true
show_error_codes = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pyright]
include = ["calcipy", "tests"]
pythonVersion = "3.10"

[tool.ruff]
# Docs: https://github.com/charliermarsh/ruff
# Tip: uv run ruff rule RUF100
line-length = 120
target-version = 'py310'

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint]
ignore = [
  'ANN002', # Missing type annotation for `*args`
  'ANN003', # Missing type annotation for `**kwargs`
  'ANN401', # Dynamically typed expressions (typing.Any) are disallowed in `pop_key`
  'BLE001', # Do not catch blind exception: `Exception`
  'COM812', # Conflicts with formatter
  'CPY001', # Missing copyright notice at top of file
  'D203', # "1 blank line required before class docstring" (Conflicts with D211)
  'D213', # "Multi-line docstring summary should start at the second line" (Conflicts with D212)
  'DOC201', # Intentionally skip Returns docs for private functions
  'DOC501', # Raised exception `RuntimeError` missing from docstring
  'EM101', # Exception must not use a string literal, assign to variable first
  'FIX001', # Line contains FIXME
  'FIX002', # Line contains TODO
  'FIX004', # Line contains HACK
  'PLR0913', # Too many arguments in function definition (6 > 5)
  'TC001', # Move application import `tail_jsonl.config.Config` into a type-checking block (Conflicts with Beartype)
  'TC002', # Move third-party import `rich.console.Console` into a type-checking block (Conflicts with Beartype)
  'TC003', # Move standard library import `argparse` into a type-checking block (Conflicts with Beartype)
  'TD001', # Invalid TODO tag: `FIXME`
  'TD002', # Missing author in TODO; try: `# TODO(<author_name>): ...`
  'TD003', # Missing issue link on the line following this TODO
  'TRY003', # Avoid specifying long messages outside the exception class
]
preview = true
select = ['ALL']
unfixable = [
  'ERA001', # Commented out code
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'

[tool.ruff.lint.flake8-tidy-imports.banned-api]
'invoke.collection.Collection'.msg = 'Use calcipy.collection.Collection instead.'
'invoke.tasks.task'.msg = 'Use calcipy.cli.task instead.'
'typing.Callable'.msg = 'Use "from collections.abc" instead.'
'typing.Dict'.msg = 'Use "from __future__ import annotations"'
'typing.List'.msg = 'Use "from __future__ import annotations"'
'typing.Optional'.msg = 'Use "from __future__ import annotations"'
'typing.Protocol'.msg = 'Use "from beartype.typing" instead.'

[tool.ruff.lint.isort]
known-first-party = ['calcipy']

[tool.ruff.lint.per-file-ignores]
'./calcipy/../*.py' = [
  'INP001', # File `/<>.py` is part of an implicit namespace package. Add an `__init__.py`.
]
'__init__.py' = [
  'D104', # Missing docstring in public package
]
'scripts/*.py' = [
  'INP001', # File `scripts/*.py` is part of an implicit namespace package. Add an `__init__.py`.
]
'scripts/check_imports.py' = [
  'F401', # imported but unused; consider adding to __all__ or using a redundant alias
]
'tests/*.py' = [
  'ANN001', # Missing type annotation for function argument
  'ANN201', # Missing return type annotation for public function
  'ANN202', # Missing return type annotation for private function `test_make_diffable`
  'ARG001', # Unused function argument: `line`
  'D100', # Missing docstring in public module
  'D103', # Missing docstring in public function
  'PLC2701', # Private name import `_<>` from external module
  'PT004', # flake8-pytest-style: fixture does not return
  'S101', # Use of `assert` detected
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.tomlsort]
all = true
in_place = true
trailing_comma_inline_array = true

[tool.uv]
default-groups = ["ci", "ddict", "docs", "maintain", "nox", "tags"]
required-version = ">=0.9.0"

[tool.uv.build-backend]
module-name = "calcipy"
module-root = ""
