[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.9.26"]

[dependency-groups]
ci = [
  "calcipy[lint,test,types]",
  "duty>=1.6.3",
  "hypothesis[cli] >=6.151.4", # Use CLI with: "uv run hypothesis write calcipy.dot_dict.ddict"
  "pytest-asyncio >=1.3.0",
  "pytest-subprocess >=1.5.3",
  "pytest-xdist>=3.8.0",
  "syrupy >=5.1.0",
  "types-markdown>=3.10.0.20251106",
  "types-pyyaml >=6.0.12.20250915",
  "types-setuptools >=80.10.0.20260124",
]
ddict = ["calcipy[ddict]"]
experimental = ["calcipy[experimental]"]
recommended = ["calcipy[recommended]"]

[project]
authors = [
  {email = "dev.act.kyle@gmail.com", name = "Kyle King"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
] # https://pypi.org/classifiers/
dependencies = [
  "beartype >=0.22.9",
  "corallium>=2.3.0rc1",
  "invoke >=2.2.1",
]
description = "Python package to simplify development"
keywords = ["calcipy_template"]
license = "MIT"
maintainers = []
name = "calcipy"
readme = "docs/README.md"
requires-python = ">=3.10.11"
version = "6.0.0rc0"

[project.optional-dependencies]
ddict = [
  "python-box >=7.3.2",
]
doc = [
  "commitizen >=4.12.1",
  "markdown-callouts>=0.4.0",
  "markdown-exec>=1.12.1",
  "mkdocs >=1.6.1",
  "mkdocs-coverage>=2.0.0",
  "mkdocs-gen-files >=0.6.0",
  "mkdocs-git-revision-date-localized-plugin>=1.5.1",
  "mkdocs-llmstxt>=0.5.0",
  "mkdocs-material >=9.7.1",
  "mkdocs-minify-plugin>=0.8.0",
  "mkdocs-section-index>=0.3.10",
  "mkdocstrings[python] >=1.0.2",
  "pymdown-extensions >=10.20.1",
  "tomli>=2.4.0; python_version < '3.11'", # PLANNED: When >=3.11, drop
]
experimental = [
  "griffe >=1.15.0",
  "semver >=3.0.4",
]
lint = [
  "ruff >=0.14.14",
]
nox = [
  "nox >=2025.11.12",
]
recommended = [
  "calcipy[doc,lint,nox,tags,test,types]",
]
tags = [
  "arrow >=1.4.0",
  "pyyaml >=6.0.3", # Required for get_doc_subdir
]
test = [
  "pytest >=9.0.2",
  "pytest-cov >=7.0.0",
  "pytest-randomly >=4.0.1",
  "pytest-watcher >=0.6.3",
]
types = [
  "mypy >=1.19.1",
  "ty >=0.0.14",
]

[project.scripts] # Docs: https://setuptools.pypa.io/en/latest/userguide/entry_point.html#console-scripts
calcipy = "calcipy.scripts:start"
calcipy-docs = "calcipy.scripts:start_docs"
calcipy-lint = "calcipy.scripts:start_lint"
calcipy-pack = "calcipy.scripts:start_pack"
calcipy-tags = "calcipy.scripts:start_tags"
calcipy-test = "calcipy.scripts:start_test"
calcipy-types = "calcipy.scripts:start_types"

[project.urls]
"Bug Tracker" = "https://github.com/kyleking/calcipy/issues"
"Changelog" = "https://github.com/kyleking/calcipy/blob/main/docs/docs/CHANGELOG.md"
"Documentation" = "https://calcipy.kyleking.me"
"Repository" = "https://github.com/kyleking/calcipy"

[tool.commitizen]
version = "6.0.0rc0"
version_files = ["calcipy/__init__.py:^__version", "pyproject.toml:^version", "uv.lock:^version"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
enable_error_code = ["ignore-without-code", "possibly-undefined", "redundant-expr", "truthy-bool"]
extra_checks = true
files = ["calcipy", "tests"]
no_implicit_reexport = true
plugins = [
]
python_version = "3.10"
show_column_numbers = true
show_error_codes = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pyright]
include = ["calcipy", "tests"]
pythonVersion = "3.10"

[tool.ruff]
# Docs: https://github.com/charliermarsh/ruff
# Tip: uv run ruff rule RUF100
line-length = 120
target-version = 'py310'

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint]
ignore = [
  'ANN002', # Missing type annotation for `*args`
  'ANN003', # Missing type annotation for `**kwargs`
  'ANN401', # Dynamically typed expressions (typing.Any) are disallowed in `pop_key`
  'BLE001', # Do not catch blind exception: `Exception`
  'COM812', # Conflicts with formatter
  'CPY001', # Missing copyright notice at top of file
  'D203', # "1 blank line required before class docstring" (Conflicts with D211)
  'D213', # "Multi-line docstring summary should start at the second line" (Conflicts with D212)
  'DOC201', # Missing "Returns" in docstring; prefer minimal docstrings
  'DOC501', # Raised exception `RuntimeError` missing from docstring
  'EM101', # Exception must not use a string literal, assign to variable first
  'FIX001', # Line contains FIXME
  'FIX002', # Line contains TODO
  'FIX004', # Line contains HACK
  'PLR0913', # Too many arguments in function definition (6 > 5)
  'RUF067', # `__init__` module should only contain docstrings and re-exports
  'TC001', # Move application import `tail_jsonl.config.Config` into a type-checking block (Conflicts with Beartype)
  'TC002', # Move third-party import `rich.console.Console` into a type-checking block (Conflicts with Beartype)
  'TC003', # Move standard library import `argparse` into a type-checking block (Conflicts with Beartype)
  'TD001', # Invalid TODO tag: `FIXME`
  'TD002', # Missing author in TODO; try: `# TODO(<author_name>): ...`
  'TD003', # Missing issue link on the line following this TODO
  'TRY003', # Avoid specifying long messages outside the exception class
]
preview = true
select = ['ALL']
unfixable = [
  'ERA001', # Commented out code
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'

[tool.ruff.lint.flake8-tidy-imports.banned-api]
'invoke.collection.Collection'.msg = 'Use calcipy.collection.Collection instead.'
'invoke.tasks.task'.msg = 'Use calcipy.cli.task instead.'
'typing.Callable'.msg = 'Use "from collections.abc" instead.'
'typing.Dict'.msg = 'Use "from __future__ import annotations"'
'typing.List'.msg = 'Use "from __future__ import annotations"'
'typing.Optional'.msg = 'Use "from __future__ import annotations"'
'typing.Protocol'.msg = 'Use "from beartype.typing" instead.'

[tool.ruff.lint.isort]
known-first-party = ['calcipy']

[tool.ruff.lint.per-file-ignores]
'./calcipy/*.py' = [
  'PLC2701', # Private name import `_collector` from external module `corallium.code_tag_collector`
]
'./calcipy/../*.py' = [
  'INP001', # File `/<>.py` is part of an implicit namespace package. Add an `__init__.py`.
]
'__init__.py' = [
  'D104', # Missing docstring in public package
]
'scripts/*.py' = [
  'INP001', # File `scripts/*.py` is part of an implicit namespace package. Add an `__init__.py`.
]
'scripts/check_imports.py' = [
  'F401', # imported but unused; consider adding to __all__ or using a redundant alias
]
'tests/*.py' = [
  'ANN001', # Missing type annotation for function argument
  'ANN201', # Missing return type annotation for public function
  'ANN202', # Missing return type annotation for private function `test_make_diffable`
  'ARG001', # Unused function argument: `line`
  'D100', # Missing docstring in public module
  'D103', # Missing docstring in public function
  'PLC2701', # Private name import `_<>` from external module
  'PLR0917', # Too many positional arguments (6/5)
  'PT004', # flake8-pytest-style: fixture does not return
  'S101', # Use of `assert` detected
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.tomlsort]
all = true
in_place = true
trailing_comma_inline_array = true

[tool.ty]

# Suppress warnings about type: ignore comments needed for mypy compatibility
[tool.ty.rules]
unused-ignore-comment = "ignore"

[tool.uv]
default-groups = ["ci", "ddict", "experimental", "recommended"]
required-version = ">=0.9.0"

[tool.uv.build-backend]
module-name = "calcipy"
module-root = ""
