[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core>=1",
]

[tool.isort]
balanced_wrapping = true
default_section = "THIRDPARTY"
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = "test_project"
length_sort = false
line_length = 120
multi_line_output = 5

[tool.calcipy.code_tag]
tags = ["FIXME", "TODO", "PLANNED"]
code_tag_summary_filename = "CODE_TAG_SUMMARY.md"

[tool.calcipy.test]
path_out = "releases/tests"
pythons = ["3.8", "3.9"]
args_pytest = "-x -l --ff --nf -vv"
args_diff = "--fail-under=95 --compare-branch=origin/release"

[tool.calcipy.lint]
path_flake8 = ".flake8"
path_isort = ".isort.cfg"
ignore_errors = ["T100", "T101", "T103"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1"
tag_format = "$version"
version_files = ["pyproject.toml", "test_project/__init__.py"]

[tool.poetry]
name = "test_project"
version = "0.0.1"
description = "This project is testing the functionality of copier_calcipy"
license = "MIT"
authors = ["Kyle King <dev.act.kyle@gmail.com>"]
maintainers = []
repository = "https://github.com/kyleking/test_project"
documentation = "https://github.com/kyleking/test_project/docs"
readme = "README.md"
include = ["LICENSE.md"]
keywords = []
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
] # https://pypi.org/classifiers/

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/kyleking/test_project/issues"

[tool.poetry.dependencies]
python = "^3.8"
calcipy = "^0.9.1"

[tool.poetry.dev-dependencies]
calcipy = { version = "*", extras = [
    "dev",
    "lint",
    "test",
    "commitizen_legacy",
] }
