[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

[tool.poetry]
authors = ["Kyle King <KyleKing@users.noreply.github.com>"]
description = ""
name = "calcipy-flake8"
packages = [{include = "calcipy_flake8"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
flake8 = ">=5.0.4"
flake8-2020 = ">=1.6.1"
flake8-SQL = ">=0.4.1"
flake8-aaa = ">=0.12.2"
flake8-absolute-import = ">=1.0.0.1"
flake8-adjustable-complexity = ">=0.0.6"
flake8-annotations = ">=2.9.0"
flake8-annotations-complexity = ">=0.0.7"
flake8-assertive = ">=2.1.0"
flake8-bandit = ">=3.0.0"
flake8-blind-except = ">=0.2.1"
flake8-breakpoint = ">=1.1.0"
flake8-broken-line = ">=0.4.0"
flake8-bugbear = ">=22.4.25"
flake8-builtins = ">=1.5.3"
flake8-class-attributes-order = ">=0.1.3"
flake8-comprehensions = ">=3.10.0"
flake8-datetimez = ">=20.10.0"
flake8-debugger = ">=4.1.2"
flake8-docstrings = ">=1.6.0"
flake8-eradicate = ">=1.2.1"
flake8-executable = ">=2.1.2"
flake8-expression-complexity = ">=0.0.11"
flake8-fine-pytest = ">=1.0.3"
flake8-fixme = ">=1.1.1"
flake8-functions = ">=0.0.7"
flake8-implicit-str-concat = ">=0.3.0"
flake8-isort = ">=4.1.1"
flake8-logging-format = ">=0.6.0"
flake8-markdown = ">=0.3.0"
flake8-pep3101 = ">=1.3.0"
flake8-pie = ">=0.16.0"
flake8-plone-hasattr = {allow-prereleases = true, version = ">=0.2.post0"}
flake8-print = ">=5.0.0"
flake8-printf-formatting = ">=1.1.2"
flake8-pytest-style = ">=1.6.0"
flake8-quotes = ">=3.3.1"
flake8-raise = ">=0.0.5"
flake8-return = ">=1.1.3"
flake8-simplify = ">=0.19.0"
flake8-string-format = ">=0.3.0"
flake8-super = ">=0.1.3"
flake8-tuple = ">=0.4.1"
flake8-typing-imports = ">=1.13.0"
flake8-use-pathlib = ">=0.3.0"
flake8-variables-names = ">=0.0.5"
pandas-vet = ">=0.2.3"
pep8-naming = ">=0.11.1"
python = "^3.7.12"
# tryceratops = ">=1.1.0" # Requires ^3.8
xenon = ">=0.9.0"
