[tool.poetry]
name = "pack_1"
version = "0.0.1"
description = ""
authors = [ "Kyle King <https://github.com/KyleKing>",]

[tool.poetry.dependencies]
python = "^3.8"
loguru = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"
