[tool.poetry]
name = "pack_3"
version = "0.0.3"
description = ""
authors = [ "Kyle King <https://github.com/KyleKing>",]

[tool.poetry.dependencies]
python = "^3.8"
jsonlines = "*"
loguru = "*"
pack_1 = {path = "../pack_1", develop = true}
pack_2 = {path = "../pack_2", develop = true}

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"
