[build-system]
requires = [ "poetry>=1.0",]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 120
length_sort = false
default_section = "THIRDPARTY"

[tool.poetry]
name = "doit_project"
version = "0.0.0"
description = "Test files and folders for calcipy unit tests"
authors = [ "Kyle King <https://github.com/KyleKing>",]

[tool.poetry.dependencies]

[tool.poetry.dev-dependencies]
